# mailhog-rs

./: Cargo.toml
src/: lib.rs
