[package]
name = "mailhog-rs"
version = "0.2.0"
edition = "2021"
description = "Rust bindings for the mailhog SMTP testing API"
license = "MIT"

[dependencies]
testcontainers = "0"
reqwest = { version = "0", features = ["json"] }
anyhow = "1"
serde = "1"
chrono = "0"

[dev-dependencies]
lettre = "0"
tokio = { version = "1", features = ["test-util", "macros"] }
rand = "0"